--- a/_config.yaml
+++ b/_config.yaml
@@ -1,14 +1,14 @@
 # site properties and page defaults
-title: jeannywwDESCRIPTION=An engaging 1-3 sentence description of your lab.
-subtitle: 
-description: 
+title: Testing Testing Testing cool thing
+subtitle: Testing testing subtitle
+description: Testing testing description 
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
 
 # site social media and other links
 links:
-  email: contact@jeannywwDESCRIPTION=An engaging 1-3 sentence description of your lab..com
+  email: test@email.com
   orcid: 0000-0001-8713-9213
   google-scholar: ETJoidYAAAAJ
   github: jeannywwDESCRIPTION=An engaging 1-3 sentence description of your lab.
