--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,47 +1,19 @@
-- title: Cool Dataset
-  subtitle: a subtitle
-  group: featured
-  image: images/photo.jpg
-  link: https://github.com/
-  description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  repo: greenelab/lab-website-template
+- title: The North Carolina-Louisiana Prostate Cancer Project
+  subtitle: PCaP
+  group:
+  image: images/projects/PCaP_logo.png
+  link: https://pcap.bioinf.unc.edu/
+  description: We conduct research in PCaP baseline and followup study data, examining risk factors that may explain the differences observed in prostate cancer risk, severity and progression between Black and White men in the southern United States.
+  repo:
   tags:
-    - resource
 
-- title: Cool Package
-  subtitle: a subtitle
-  group: featured
-  image: images/photo.jpg
-  link: https://github.com/
-  description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  repo: greenelab/lab-website-template
-  tags:
-    - resource
 
-- title: Cool Tutorial
-  subtitle: a subtitle
-  image: images/photo.jpg
-  link: https://github.com/
-  description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  repo: greenelab/lab-website-template
+- title: The Surveillance, Epidemiology, and End Results (SEER) Program
+  subtitle: SEER
+  group:
+  image: images/projects/seer-logo.png
+  link: https://seer.cancer.gov/
+  description: Our current studies also utilize specialized SEER data to examine cancer incidence, survival, and mortality in the United States
+  repo:
   tags:
-    - resource
-    - publication
 
-- title: Cool Web App
-  subtitle: a subtitle
-  image: images/photo.jpg
-  link: https://github.com/
-  description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  repo: greenelab/lab-website-template
-  tags:
-    - software
-
-- title: Cool Web Server
-  subtitle: a subtitle
-  image: images/photo.jpg
-  link: https://github.com/
-  description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  repo: greenelab/lab-website-template
-  tags:
-    - software
