fixed github broken link

--- a/_config.yaml
+++ b/_config.yaml
@@ -11,7 +11,7 @@ links:
   email: ebonee@unc.edu
   orcid: 0000-0002-4638-1190
   google-scholar: ts9OA5gAAAAJ
-  github: https://github.com/ButlerPopSci/
+  github: ButlerPopSci
 
 
 ### jekyll settings
